Photo detay sayfası eklendi ve ufak değişiklikler yapıldı

--- a/views/add.ejs
+++ b/views/add.ejs
@@ -37,7 +37,7 @@
           <div class="mx-auto pb-3 tm-about-text-container px-3">
             <div class="row">
               <div class="col-lg-8 mb-5 offset-2">
-                <form method="post" action="/photos" class="tm-contact-form">
+                <form method="post" action="/save" class="tm-contact-form">
                   <div class="form-group">
                     <input type="text" name="title" class="form-control rounded-0" placeholder="Photo Name" required/>
                   </div>
