--- a/views/add.ejs
+++ b/views/add.ejs
@@ -45,7 +45,7 @@
                     <textarea rows="8" name="description" class="form-control rounded-0" placeholder="Photo Description"></textarea>
                   </div>
                   <div class="form-group">
-                    <input type="file" name="photoUrl" class="form-control rounded-0" style="padding-bottom: 3rem">
+                    <input type="file" name="image" class="form-control rounded-0" style="padding-bottom: 3rem" encType="multipart/form-data">
                   </div>
 
                   <div class="form-group mb-0">
