--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,7 +42,7 @@
                         </div>
                     </div>
                     
-                    <div class="row tm-catalog-item-list">
+                    <div class="row ">
                         <% photos.forEach(function(photo){ %>
                         <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
                             <div class="position-relative tm-thumbnail-container">
