--- a/views/partials/_navigation.ejs
+++ b/views/partials/_navigation.ejs
@@ -4,7 +4,7 @@
             <div class="col-7 col-md-4">
                 <a href="/" class="tm-bg-black text-center tm-logo-container">
                     <i class="fas fa-video tm-site-logo mb-3"></i>
-                    <h1 class="tm-site-name">Video Catalog</h1>
+                    <h1 class="tm-site-name">Photo Catalog</h1>
                 </a>
             </div>
             <div class="col-5 col-md-8 ml-auto mr-0">
@@ -20,7 +20,7 @@
                         </button>
                         <div class="collapse navbar-collapse tm-nav" id="navbar-nav">
                             <ul class="navbar-nav text-uppercase">
-                                <li class="nav-item active">
+                                <li class="nav-item">
                                     <a class="nav-link tm-nav-link" href="/">Photos</a>
                                 </li>
                                 <li class="nav-item">
