--- a/views/photo.ejs
+++ b/views/photo.ejs
@@ -26,7 +26,7 @@
 						<div class="row mb-5 pb-4">
 							<div class="col-12">
 								<!-- Video player 1422x800 -->
-								<img src="https://images.unsplash.com/photo-1656326649262-35f9e10b2da6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" style="width: 97vw" alt="">
+								<img src="<%= photo.photoUrl %>" style="width: 97vw" alt="">
 							</div>
 						</div>
 						<div class="row mb-5 pb-5">
@@ -40,7 +40,7 @@
 							<div class="col-xl-4 col-lg-5">
 								<!-- Share box -->
 								<div class="tm-bg-gray tm-share-box">
-									<a href="#"
+									<a href="/edit"
 										class="tm-bg-white px-5 mb-4 d-inline-block tm-text-primary tm-likes-box tm-liked">
 										<i class="fas fa-heart mr-3 tm-liked-icon"></i>
 										<i class="far fa-heart mr-3 tm-not-liked-icon"></i>
