commit edildi 1 Tem 22 - 01:17

--- a/views/photo.ejs
+++ b/views/photo.ejs
@@ -40,7 +40,7 @@
 							<div class="col-xl-4 col-lg-5">
 								<!-- Share box -->
 								<div class="tm-bg-gray tm-share-box">
-									<a href="/edit"
+									<a href="/edit/<%= photo.id %>"
 										class="tm-bg-white px-5 mb-4 d-inline-block tm-text-primary tm-likes-box tm-liked">
 										<i class="fas fa-heart mr-3 tm-liked-icon"></i>
 										<i class="far fa-heart mr-3 tm-not-liked-icon"></i>
