--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -31,17 +31,17 @@
           <div class="mx-auto pb-3 tm-about-text-container px-3">
             <div class="row">
               <div class="col-lg-8 mb-5 offset-2">
-                <form method="post" action="/save" class="tm-contact-form" encType="multipart/form-data">
+                <form method="post" action="/update" class="tm-contact-form" encType="multipart/form-data">
                   <div class="form-group">
-                    <input type="text" name="title" class="form-control rounded-0" placeholder="Photo Name" required/>
+                    <input type="text" name="title" class="form-control rounded-0" value="<%= editPhoto.title %>" required/>
                   </div>
                   <div class="form-group">
-                    <textarea rows="8" name="description" class="form-control rounded-0" placeholder="Photo Description"></textarea>
+                    <textarea rows="8" name="description" class="form-control rounded-0"><%= editPhoto.description %></textarea>
                   </div>
 
                   <div class="form-group mb-0">
                     <button type="submit"
-                      class="btn btn-primary rounded-0 d-block ml-auto mr-0 tm-btn-animate tm-btn-submit tm-icon-submit"><span>Edit Photo</span></button>
+                      class="btn btn-primary rounded-0 d-block ml-auto mr-0 tm-btn-animate tm-btn-submit tm-icon-submit"><span>Update Informations</span></button>
                   </div>
                 </form>
               </div>
