index ve detay sayfasındaki görsel boyutları iyileştirildi

--- a/views/photo.ejs
+++ b/views/photo.ejs
@@ -26,7 +26,7 @@
 						<div class="row mb-5 pb-4">
 							<div class="col-12">
 								<!-- Video player 1422x800 -->
-								<img src="<%= photo.photoUrl %>" style="width: 97vw" alt="">
+								<img src="<%= photo.photoUrl %>" style="width: 60vw; height: 66vh;" alt="">
 							</div>
 						</div>
 						<div class="row mb-5 pb-5">
