--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,7 +46,7 @@
                         <% photos.forEach(function(photo){ %>
                         <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
                             <div class="position-relative tm-thumbnail-container">
-                                <img src="<%= photo.photoUrl %>" alt="Image" class="img-fluid tm-catalog-item-img">    
+                                <img src="<%= photo.photoUrl %>" alt="Image" class="img-fluid tm-catalog-item-img" style="width: 100%; height: 300px;">    
                                 <a href="/photos/<%= photo._id %>" class="position-absolute tm-img-overlay">
                                     <i class="fas fa-play tm-overlay-icon"></i>
                                 </a>
